--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 torch>=2.0
 tokenizers>=0.14.0
-transformers==4.35.0
+transformers==4.37.0
 accelerate
 sympy==1.12
 pebble 
 timeout-decorator 
 attrdict
+einops
+gradio
+huggingface-hub
